comment-out icons

--- a/dashboard/v2/console.html
+++ b/dashboard/v2/console.html
@@ -231,6 +231,8 @@ var asiFilters = {
 
 var api_host = document.domain + ":8000";
 
+var refresh_interval = '30'; // seconds
+
 // ************************************* DO NOT EDIT ANYTHING BELOW THIS LINE **************************************
 
 var CRITICAL_SEV_CODE = 1;
@@ -436,16 +438,16 @@ $(document).ready(function() {
             // $('td:eq(2)', nRow).html(d.toLocaleString());
             $('td:eq(2)', nRow).html(date2iso8601(d));
 
-            if (aData[1] == OPEN) {
-                $('td:eq(9)', nRow).append('<a id="' + aData[11] + '" class="ack-alert" rel="tooltip" title="Acknowledge"><i class="icon-star-empty"></i></a>');
-            }
-            if (aData[1] == ACK) {
-                $('td:eq(9)', nRow).append('<a id="' + aData[11] + '" class="unack-alert" rel="tooltip" title="Unacknowledge"><i class="icon-star"></i></a>');
-            }
-            $('td:eq(9)', nRow).append('<a id="' + aData[11] + '" href="mailto:?subject=' + aData[22] + '&body=' + aData[9] + '%0D%0A%0D%0ASee http://' + api_host + '/alerta/details.php?id='
-                    + aData[11] + '" class="email-alert" rel="tooltip" title="Email Alert" target="_blank"><i class="icon-envelope"></i></a>');
-            $('td:eq(9)', nRow).append('<a id="' + aData[11] + '" class="tag-alert" rel="tooltip" title="Tag Alert"><i class="icon-tags"></i></a>');
-            $('td:eq(9)', nRow).append('<a id="' + aData[11] + '" class="delete-alert" rel="tooltip" title="Delete Alert"><i class="icon-trash"></i></a>');
+            // if (aData[1] == OPEN) {
+            //     $('td:eq(9)', nRow).append('<a id="' + aData[11] + '" class="ack-alert" rel="tooltip" title="Acknowledge"><i class="icon-star-empty"></i></a>');
+            // }
+            // if (aData[1] == ACK) {
+            //     $('td:eq(9)', nRow).append('<a id="' + aData[11] + '" class="unack-alert" rel="tooltip" title="Unacknowledge"><i class="icon-star"></i></a>');
+            // }
+            // $('td:eq(9)', nRow).append('<a id="' + aData[11] + '" href="mailto:?subject=' + aData[22] + '&body=' + aData[9] + '%0D%0A%0D%0ASee http://' + api_host + '/alerta/details.php?id='
+            //         + aData[11] + '" class="email-alert" rel="tooltip" title="Email Alert" target="_blank"><i class="icon-envelope"></i></a>');
+            // $('td:eq(9)', nRow).append('<a id="' + aData[11] + '" class="tag-alert" rel="tooltip" title="Tag Alert"><i class="icon-tags"></i></a>');
+            // $('td:eq(9)', nRow).append('<a id="' + aData[11] + '" class="delete-alert" rel="tooltip" title="Delete Alert"><i class="icon-trash"></i></a>');
         },
         "fnServerData": function (sSource, aoData, fnCallback) {
             $.ajax( {
@@ -520,7 +522,7 @@ $(document).ready(function() {
 
     timer = setTimeout(function() {
         refreshAlerts(true);
-    }, 10000);
+    }, refresh_interval * 1000);
 });
 
 function fnFormatDetails(aData) {
@@ -652,7 +654,7 @@ function refreshAlerts(refresh) {
     if (refresh) {
         timer = setTimeout(function() {
             refreshAlerts(refresh);
-        }, 10000);
+        }, refresh_interval * 1000);
     }
 }
 
@@ -704,7 +706,7 @@ function updateStatusCounts(refresh) {
         if (refresh) {
             timer = setTimeout(function () {
                 updateStatusIndicator(env_filter, refresh);
-            }, 120000);
+            }, refresh_interval * 1000);
         }
     });
 }
@@ -760,7 +762,7 @@ function updateStatusIndicator(service, refresh) {
         if (refresh) {
             timer = setTimeout(function () {
                 updateStatusIndicator(status, refresh);
-            }, 120000);
+            }, refresh_interval * 1000);
         }
     });
 }
