--- a/dashboard/v2/console.html
+++ b/dashboard/v2/console.html
@@ -418,7 +418,7 @@ $(document).ready(function() {
         "bSort": true,
         "bPaginate": true,
         "bDeferRender": true,
-        "sAjaxSource": "http://localhost:8000/alerta/api/v2/alerts?" + env_filter + filter,
+        "sAjaxSource": 'http://' + api_host + '/alerta/api/v2/alerts?' + env_filter + filter,
         "fnRowCallback": function (nRow, aData, iDisplayIndex, iDisplayIndexFull) {
             nRow.className = 'severity-' + aData[0] + ' status-' + aData[1];
 
@@ -650,7 +650,7 @@ $('#alerts tbody tr').live('click', function () {
 });
 
 function refreshAlerts(refresh) {
-    oTable.fnReloadAjax("http://localhost:8000/alerta/api/v2/alerts?" + env_filter + filter + limit + from);
+    oTable.fnReloadAjax('http://l' + api_host + '/alerta/api/v2/alerts?' + env_filter + filter + limit + from);
     if (refresh) {
         timer = setTimeout(function() {
             refreshAlerts(refresh);
