infra console should be all environments

--- a/dashboard/v2/infra.html
+++ b/dashboard/v2/infra.html
@@ -296,7 +296,7 @@
 
 <script>
 
-var env_filter = 'environment=PROD|INFRA';
+var env_filter = ''; // all environments
 
 var asiFilters = {
     'KPL':           '&tags=datacentre:dc1',
