add heartbeat status to about tab

--- a/dashboard/v2/console.html
+++ b/dashboard/v2/console.html
@@ -32,11 +32,11 @@
             <a class="brand" href="./index.html">Alert Console</a>
             <div class="nav-collapse">
                 <ul class="nav">
-                    <li class="active"><a href="./index.php">Production</a></li>
-                    <li class=""><a href="./dev.php">Development</a></li>
-                    <li class=""><a href="./infra.php">Infrastructure</a></li>
+                    <li class="active"><a href="./console.html">Production</a></li>
+                    <li class=""><a href="./null.html">Development</a></li>
+                    <li class=""><a href="./null.html">Infrastructure</a></li>
                     <li class=""><a href="/Kibana">History</a></li>
-                    <li class=""><a href="./about.php">About</a></li>
+                    <li class=""><a href="./about.html">About</a></li>
                 </ul>
             </div><!--/.nav-collapse -->
         </div>
