--- a/dashboard/v2/infra.html
+++ b/dashboard/v2/infra.html
@@ -36,7 +36,7 @@
                     <li class=""><a href="./dev.html">Development</a></li>
                     <li class="active"><a href="./infra.html">Infrastructure</a></li>
                     <li class=""><a href="/Kibana">History</a></li>
-                    <li class=""><a href="./about.php">About</a></li>
+                    <li class=""><a href="./about.html">About</a></li>
                 </ul>
             </div><!--/.nav-collapse -->
         </div>
@@ -309,7 +309,7 @@ var asiFilters = {
     'Hardware':      '&group=Hardware'
 };
 
-var api_host = document.domain + ":80";
+var api_host = document.domain + ":8000";
 
 var refresh_interval = '30'; // seconds
 
