use standard http port

--- a/dashboard/v2/console.html
+++ b/dashboard/v2/console.html
@@ -35,8 +35,8 @@
                     <li class="active"><a href="./console.html">Production</a></li>
                     <li class=""><a href="./null.html">Development</a></li>
                     <li class=""><a href="./null.html">Infrastructure</a></li>
-                    <li class=""><a href="/Kibana">History</a></li>
-                    <li class=""><a href="./about.html">About</a></li>
+                    <li class=""><a href="./null.html">History</a></li>
+                    <li class=""><a href="./null.html">About</a></li>
                 </ul>
             </div><!--/.nav-collapse -->
         </div>
