--- a/dashboard/v2/dev.html
+++ b/dashboard/v2/dev.html
@@ -312,7 +312,7 @@
         };
         updateStatusCounts(env_filter, true);
         updateAllIndicators(env_filter, asiFilters, true);
-        updateAlertsTable(env_filter);
+        updateAlertsTable(env_filter, asiFilters);
     });
 </script>
 
