--- a/dashboard/v2/db.html
+++ b/dashboard/v2/db.html
@@ -308,7 +308,7 @@
         };
         updateStatusCounts(env_filter, true);
         updateAllIndicators(env_filter, asiFilters, true);
-        updateAlertsTable(env_filter);
+        updateAlertsTable(env_filter, asiFilters);
     });
 </script>
 
