support complex mongo API queries

--- a/dashboard/v2/infra.html
+++ b/dashboard/v2/infra.html
@@ -305,7 +305,7 @@
             'BRK':           '&tags=datacentre:dc2',
             'EC2':           '&tags=datacentre:eu-west-1',
             'NetworkSyslog': '&group=Network|Syslog',
-            'AlertaGanglia': '&group=Internal|Ganglia',
+            'AlertaGanglia': '&q={"$or":[{"service":"Alerta"},{"group":"Ganglia"}]}',
             'Puppet':        '&group=Puppet',
             'Deploys':       '&group=Deploys',
             'Hardware':      '&group=Hardware'
