--- a/dashboard/v2/about.html
+++ b/dashboard/v2/about.html
@@ -49,10 +49,10 @@
             <div class="row show-grid">
             <table class="table table-bordered table-condensed" id="Heartbeats">
                 <thead>
-                <tr><th>Origin</th><th>Version</th><th>Heartbeat Sent</th><th>Time Since Received</th></tr>
+                <tr><th>Origin</th><th>Version</th><th>Heartbeat Sent</th><th>Time Since Received</th><th>Latency</th></tr>
                 </thead>
                 <tbody id="heartbeat-info">
-                <tr><td>...</td><td>...</td><td>...</td><td>...</td></tr>
+                <tr><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td></tr>
                 </tbody>
             </table>
             </div> <!-- row -->
@@ -113,6 +113,8 @@
                 var mins = Math.floor(diff / 60);
                 var secs = Math.floor(diff % 60);
 
+                var latency = new Date(hb.receiveTime).getTime() - new Date(hb.createTime).getTime();
+
                 var since = '';
                 if (mins > 0) {
                     since = mins + ' minutes ' + secs + ' seconds';
@@ -125,6 +127,7 @@
                         '<td>' + hb.version + '</td>' +
                         '<td>' + date2str(hb.createTime) + '</td>' +
                         '<td>' + since + '</td>' +
+                        '<td>' + latency + ' ms' + '</td>' +
                         '</tr>';
             });
             $('#heartbeat-info').html(rows);
