fix environment filters for console v2

--- a/dashboard/v2/console.html
+++ b/dashboard/v2/console.html
@@ -228,7 +228,7 @@
 <script>
     $(document).ready(function() {
 
-        var env_filter = 'environment=PROD|DEV|INFRA';
+        var env_filter = '&environment=PROD|DEV|INFRA';
         var asiFilters = {
             'Web':      '&service=Web',
             'Common':   '&service=Common',
