--- a/dashboard/v2/dev.html
+++ b/dashboard/v2/dev.html
@@ -304,7 +304,7 @@
 <script>
     $(document).ready(function() {
 
-        var env_filter = 'environment=RELEASE|QA|TEST|CODE|DEV|GUDEV|STAGE|LWP';
+        var env_filter = '&environment=RELEASE|QA|TEST|CODE|DEV|GUDEV|STAGE|LWP';
         var asiFilters = {
             'R2R1':             '&service=R2|R1',
             'FrontendMobile':   '&service=Frontend|Mobile',
