--- a/dashboard/v2/index.html
+++ b/dashboard/v2/index.html
@@ -304,7 +304,7 @@
 <script>
     $(document).ready(function() {
 
-        var env_filter = 'environment=PROD|INFRA';
+        var env_filter = '&environment=PROD|INFRA';
         var asiFilters = {
             'R2R1':             '&service=R2|R1',
             'FrontendMobile':   '&service=Frontend|Mobile',
