--- a/dashboard/v2/console.html
+++ b/dashboard/v2/console.html
@@ -16,7 +16,7 @@
             padding-bottom: 40px;
         }
     </style>
-    <link href="css/custom.css" rel="stylesheet">
+    <link href="assets/css/custom.css" rel="stylesheet">
 
 </head>
 
@@ -29,14 +29,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </a>
-            <a class="brand" href="./index.html">Alert Console</a>
+            <a class="brand" href="index.html">Alert Console</a>
             <div class="nav-collapse">
                 <ul class="nav">
-                    <li class="active"><a href="./console.html">Production</a></li>
-                    <li class=""><a href="./null.html">Development</a></li>
-                    <li class=""><a href="./null.html">Infrastructure</a></li>
-                    <li class=""><a href="./null.html">History</a></li>
-                    <li class=""><a href="./null.html">About</a></li>
+                    <li class="active"><a href="console.html">Production</a></li>
+                    <li class=""><a href="null.html">Development</a></li>
+                    <li class=""><a href="null.html">Infrastructure</a></li>
+                    <li class=""><a href="null.html">History</a></li>
+                    <li class=""><a href="null.html">About</a></li>
                 </ul>
             </div><!--/.nav-collapse -->
         </div>
@@ -223,7 +223,7 @@
 </div>
 <!-- end container -->
 
-<script src="js/console.js"></script>
+<script src="assets/js/console.js"></script>
 
 <script>
     $(document).ready(function() {
