--- a/dashboard/v2/dev.html
+++ b/dashboard/v2/dev.html
@@ -1,4 +1,4 @@
-
+<html lang="en">
 <head>
     <!-- link href='http://fonts.googleapis.com/css?family=Sintony:400,700' rel='stylesheet' type='text/css' -->
 
@@ -16,7 +16,7 @@
             padding-bottom: 40px;
         }
     </style>
-    <link href="css/custom.css" rel="stylesheet">
+    <link href="assets/css/custom.css" rel="stylesheet">
 
 </head>
 
@@ -29,14 +29,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </a>
-            <a class="brand" href="./index.html">Alert Console</a>
+            <a class="brand" href="index.html">Alert Console</a>
             <div class="nav-collapse">
                 <ul class="nav">
-                    <li class=""><a href="./index.html">Production</a></li>
+                    <li class=""><a href="index.html">Production</a></li>
                     <li class="active"><a href="./dev.html">Development</a></li>
-                    <li class=""><a href="./infra.html">Infrastructure</a></li>
+                    <li class=""><a href="infra.html">Infrastructure</a></li>
                     <li class=""><a href="/Kibana">History</a></li>
-                    <li class=""><a href="./about.html">About</a></li>
+                    <li class=""><a href="about.html">About</a></li>
                 </ul>
             </div><!--/.nav-collapse -->
         </div>
@@ -299,7 +299,7 @@
 </div>
 <!-- end container -->
 
-<script src="js/console.js"></script>
+<script src="assets/js/console.js"></script>
 
 <script>
     $(document).ready(function() {
