--- a/alerta/app/static/example/oembed.html
+++ b/alerta/app/static/example/oembed.html
@@ -10,7 +10,7 @@
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-<script src="http://localhost:8080/embed.js"></script>
+<script src="http://api.alerta.io/embed.js"></script>
 <script>
 $(function() {
 
@@ -18,11 +18,11 @@ $(function() {
   // $.alerta.defaults.key = 'demo-key';
   // or
   $.alerta.defaults = {
-      endpoint: 'http://localhost:8080',
+      endpoint: 'http://api.alerta.io', // oEmbed endpoint becomes http://api.alerta.io/oembed.json
       key: 'demo-key'
   };
 
-  $('.mobile-alerts').alerta('http://localhost:8080/alerts/count?service=Mobile', {title:'Mobile Service'});
+  $('.mobile-alerts').alerta('http://api.alerta.io/alerts/count?service=Mobile', {title:'Mobile Service'});
 
 });
 </script>
