oembed example should only show open alerts

--- a/examples/oembed.html
+++ b/examples/oembed.html
@@ -22,7 +22,7 @@ $(function() {
       key: 'demo-key'
   };
 
-  $('.mobile-alerts').alerta('http://api.alerta.io/alerts/count?service=Mobile', {title:'Mobile Service'});
+  $('.mobile-alerts').alerta('http://api.alerta.io/alerts/count?service=Mobile&status=open', {title:'Mobile Service'});
 
 });
 </script>
