Move styling to embedding page from embedded to simplify configure.
Removed width/height from parameters.
Allow to hide title.

--- a/examples/oembed.html
+++ b/examples/oembed.html
@@ -6,6 +6,11 @@
 </head>
 <body>
 
+<style>
+    .alerta-div {width:100%; padding:20px;}
+    .alerta-table {width:100%; border:1px solid lightgrey; text-align:center;}
+</style>
+
 <div class="mobile-alerts">Loading...</div>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
