--- a/examples/oembed-for-grafana.html
+++ b/examples/oembed-for-grafana.html
@@ -7,22 +7,59 @@
 
 <a href="http://localhost:8080/">Alerta</a>
 
-<script type="text/javascript" src="http://localhost:8080/api/embed.js"></script>
+<!-- Content from http://localhost:8080/api/embed.js -->
+<script type="text/javascript">
+  (function($, window) {
+
+    var config = {
+      endpoint: 'http://api.alerta.io',
+      key: null
+    };
+
+    var Alerta = function() {};
+    Alerta.prototype = {
+      defaults: {}
+    }
+    $.alerta = new Alerta();
+
+    $.fn.alerta = function( url, options ) {
+
+      $.extend(config, $.alerta.defaults, options);
+
+      return this.each(function() {
+
+        var base = config.endpoint + '/oembed?url=' + encodeURIComponent(url);
+        var key = (config.key ? '&api-key=' + config.key : '');
+        var title = (config.title ? '&title=' + encodeURIComponent(config.title) : '');
+        base += key + title;
+
+        $.ajax({
+          url: base,
+          context: this,
+          success: function(data) {
+            $(this).html(data.html);
+          }
+        });
+      });
+    }
+
+    window.Alerta = Alerta;
+  }(jQuery, window));
+  </script>
+
 <script>
-  $(window).on('load', function () {
-    $(function () {
-      $.alerta.defaults = {
-        endpoint: 'http://localhost:8080/api',
-        key: 'demo-key'
-      };
+  $(document).ready(function () {
+    $.alerta.defaults = {
+      endpoint: 'http://localhost:8080/api',
+      key: 'demo-key'
+    };
 
-      function renew() {
-        $('.mobile-alerts').alerta('http://localhost:8080/api/alerts/count?status=open', { title: '' });
+    function renew() {
+      $('.mobile-alerts').alerta('http://localhost:8080/api/alerts/count?status=open', { title: '' });
 
-        setTimeout(renew, 30000);
-      }
+      setTimeout(renew, 30000);
+    }
 
-      renew();
-    });
+    renew();
   });
 </script>
